--- a/Clock/index.html
+++ b/Clock/index.html
@@ -5,31 +5,49 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Analog Clock</title>
         <link rel="stylesheet" href="main.css">
-        <script src="main.js" defer ></script>
     </head>
 
         <body>
             <div class="clock">
                 <div class="dot"></div>
-                <div class="num num1"><span>1</span></div>
-                <div class="num num2"><span>2</span></div>
-                <div class="num num3"><span>3</span></div>
-                <div class="num num4"><span>4</span></div>
-                <div class="num num5"><span>5</span></div>
-                <div class="num num6"><span>6</span></div>
-                <div class="num num7"><span>7</span></div>
-                <div class="num num8"><span>8</span></div>
-                <div class="num num9"><span>9</span></div>
-                <div class="num num10"><span>10</span></div>
-                <div class="num num11"><span>11</span></div>
-                <div class="num num12"><span>12</span></div>
+                <div class="num num1">1</div>
+                <div class="num num2">2</div>
+                <div class="num num3">3</div>
+                <div class="num num4">4</div>
+                <div class="num num5">5</div>
+                <div class="num num6">6</div>
+                <div class="num num7">7</div>
+                <div class="num num8">8</div>
+                <div class="num num9">9</div>
+                <div class="num num10">10</div>
+                <div class="num num11">11</div>
+                <div class="num num12">12</div>
+                <div class="brand">AJANTA</div>
 
-                <div class="hr-hand"></div>
-                <div class="min-hand"></div>
-                <div class="sec-hand"></div>
+                <div class="minute-hand-wrapper" id="minute-hand">
+                    <div class="minute-hand">
+                        <div class="hand"></div>
+                        <div class="arrow"><Var>V</div>
+                    </div>
+                </div>
+                <div class="hour-hand-wrapper" id="hour-hand">
+                    <div class="hour-hand">
+                        <div class="hand"></div>
+                        <div class="arrow"><Var>V</div>
+                    </div>
+                </div>
+            <div class="sec-hand-wrapper" id="sec-hand">
+                <div class="sec-hand">
+                    <div class="hand"></div>
+                </div>
+            </div>
+
+
 
              </div>
+             <script src="main.js"></script>
+
         </body>
 </html>
