--- a/Clock/index.html
+++ b/Clock/index.html
@@ -11,7 +11,7 @@
 
         <body>
             <div class="clock">
-                <div class="dot"></div>
+                <div class="point"></div>
                 <div class="num num1">1</div>
                 <div class="num num2">2</div>
                 <div class="num num3">3</div>
@@ -24,7 +24,7 @@
                 <div class="num num10">10</div>
                 <div class="num num11">11</div>
                 <div class="num num12">12</div>
-                <div class="brand">AJANTA</div>
+                <div class="brand">FASTRACK</div>
 
                 <div class="minute-hand-wrapper" id="minute-hand">
                     <div class="minute-hand">
